<resources>
    <string name="app_name">Clickable Images</string>
    <string name="action_settings">Settings</string>
    <string name="donut_content">Donuts are glazed and sprinkled with candy.</string>
    <string name="donut_order_message">You ordered a Donut</string>
    <string name="ice_cream_content">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="ice_cream_order_message">You ordered a Ice Cream</string>
    <string name="froyo_content">FroYo is premium self-serve frozen yogurt.</string>
    <string name="froyo_order_message">You Ordered a Frozen Yogurt</string>
    <string name="app_title">Droid Desserts</string>
    <string name="order_text">TextView</string>
    <string name="phone_hint">Phone</string>
    <string name="note_hint">Note</string>
    <string name="note_title">Note</string>
    <string name="phone_title">Phone</string>
    <string name="name_title">Name</string>
    <string name="address_title">Address</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="delivery_title">Choose a delivery method:</string>
    <string name="option1_text">Same day messenger service</string>
    <string name="option2_text">Next day ground delivery</string>
    <string name="option3_text">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
